Fix main styles on small laptop

--- a/src/scss/modules/_gallery.scss
+++ b/src/scss/modules/_gallery.scss
@@ -105,6 +105,10 @@
     justify-content: center;
     margin: 0 auto;
     padding: 100px 0 80px;
+
+    @media (max-width: $breakpoint-desktop-width) {
+      max-width: $main-max-laptop;
+    }
   }
 
   &__wrapper {
